# replayd

./: .dockerignore  .gitignore  ProjectDescription.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/rules/: project.mdc
docker/: Dockerfile.backend
docker/postgres/: init-logto-db.sh
scripts/: agent_steps.py  branch_agent.py  demo_agent.py  diverging_demo_agent.py  list_runs.py  live_test.py  regression_demo.py  replay_agent.py  replay_capture_demo_agent.py
src/replayd/: check_oidc.py  config.py  control_auth.py  decoding.py  main.py  management.py  migrate.py  models.py  proxy.py  redaction.py  semantics.py  tenancy.py  testing.py
tests/: blob_backends.py  conftest.py  db_backends.py  test_auth.py  test_blobs.py  test_branch.py  test_capture.py  test_cli_test_run.py  test_cli_test_run_agent.py  test_health.py  test_ingest_keys_api.py  test_invitations.py  test_management.py  test_me.py  test_members.py  test_migrations.py  test_oidc.py  test_project_filter.py  test_projects_api.py  test_provisioning.py  test_proxy.py  test_proxy_ingest.py  test_rbac.py  test_regression.py  test_replay.py  test_replay_capture.py  test_replay_routing.py  test_scoping.py  test_semantics.py  test_storage.py  test_tenancy.py
tmp_e2e_demo/: replayd.db-shm  replayd.db-wal
tmp_e2e_demo2/: replayd.db-shm  replayd.db-wal
web/: Dockerfile  auth.ts  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  runs-list-client.tsx
web/components/: active-project-provider.tsx  app-nav.tsx  incoming-invitations-banner.tsx  me-provider.tsx  oidc-auth-gate.tsx  (+1 more)
(+48 files in other folders)
